--- a/Jogo_da_Forca/index.html
+++ b/Jogo_da_Forca/index.html
@@ -6,6 +6,6 @@
         <title>Jogo da Forca</title>
     </head>
     <body>
-        <h1>JOGO DA FORCA</h1>
+        <h1>JOGO DA FORCAa</h1>
     </body>
 </html>
