Esqueleto em HTML

--- a/Jogo_da_Forca/index.html
+++ b/Jogo_da_Forca/index.html
@@ -6,6 +6,56 @@
         <title>Jogo da Forca</title>
     </head>
     <body>
-        <h1>JOGO DA FORCAa</h1>
+        <header>
+            <h1 class="titulo">Jogo da Forca</h1>
+        </header>
+
+        <div>
+            <img class="imagem-forca" id="forca" src="#">
+        </div>
+
+        <div class="secao-dica">
+            <h3>Dica:</h3>
+            <p>Calor</p>
+        </div>
+
+        <div class="secao-letras-palavra">
+            <div class="caixa-letra"><!--D--></div>
+            <div class="caixa-letra"><!--E--></div>
+            <div class="caixa-letra"><!--S--></div>
+            <div class="caixa-letra"><!--E--></div>
+            <div class="caixa-letra"><!--R--></div>
+            <div class="caixa-letra"><!--T--></div>
+            <div class="caixa-letra"><!--O--></div>
+        </div>
+
+        <div class="teclado-virtual">
+            <div class="botao-letra">Q</div>
+            <div class="botao-letra">W</div>
+            <div class="botao-letra">E</div>
+            <div class="botao-letra">R</div>
+            <div class="botao-letra">T</div>
+            <div class="botao-letra">Y</div>
+            <div class="botao-letra">U</div>
+            <div class="botao-letra">I</div>
+            <div class="botao-letra">O</div>
+            <div class="botao-letra">P</div>
+            <div class="botao-letra">A</div>
+            <div class="botao-letra">S</div>
+            <div class="botao-letra">D</div>
+            <div class="botao-letra">F</div>
+            <div class="botao-letra">G</div>
+            <div class="botao-letra">H</div>
+            <div class="botao-letra">J</div>
+            <div class="botao-letra">K</div>
+            <div class="botao-letra">L</div>
+            <div class="botao-letra">Z</div>
+            <div class="botao-letra">X</div>
+            <div class="botao-letra">C</div>
+            <div class="botao-letra">V</div>
+            <div class="botao-letra">B</div>
+            <div class="botao-letra">N</div>
+            <div class="botao-letra">M</div>
+        </div>
     </body>
 </html>
