Alterações no HTML e CSS

--- a/Jogo_da_Forca/index.html
+++ b/Jogo_da_Forca/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@100;300;400;900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="./CSS/styles.css">
         <title>Jogo da Forca</title>
     </head>
     <body>
@@ -10,8 +12,8 @@
             <h1 class="titulo">Jogo da Forca</h1>
         </header>
 
-        <div>
-            <img class="imagem-forca" id="forca" src="#">
+        <div class="area-imagem">
+            <img class="imagem-forca" id="forca" src="./Imagens/boneco0.png">
         </div>
 
         <div class="secao-dica">
@@ -20,42 +22,57 @@
         </div>
 
         <div class="secao-letras-palavra">
-            <div class="caixa-letra"><!--D--></div>
-            <div class="caixa-letra"><!--E--></div>
-            <div class="caixa-letra"><!--S--></div>
-            <div class="caixa-letra"><!--E--></div>
-            <div class="caixa-letra"><!--R--></div>
-            <div class="caixa-letra"><!--T--></div>
-            <div class="caixa-letra"><!--O--></div>
+            <div class="caixa-letra"><!--D--> <p>D</p> </div>
+            <div class="caixa-letra"><!--E--> <p>E</p> </div>
+            <div class="caixa-letra"><!--S--> <p>S</p> </div>
+            <div class="caixa-letra"><!--E--> <p>E</p> </div>
+            <div class="caixa-letra"><!--R--> <p>R</p> </div>
+            <div class="caixa-letra"><!--T--> <p>T</p> </div>
+            <div class="caixa-letra"><!--O--> <p>O</p> </div>
+        </div>
+
+        <div class="instrucao">
+            <h2>Selecione a letra que quer inserir:</h2>
         </div>
 
         <div class="teclado-virtual">
-            <div class="botao-letra">Q</div>
-            <div class="botao-letra">W</div>
-            <div class="botao-letra">E</div>
-            <div class="botao-letra">R</div>
-            <div class="botao-letra">T</div>
-            <div class="botao-letra">Y</div>
-            <div class="botao-letra">U</div>
-            <div class="botao-letra">I</div>
-            <div class="botao-letra">O</div>
-            <div class="botao-letra">P</div>
-            <div class="botao-letra">A</div>
-            <div class="botao-letra">S</div>
-            <div class="botao-letra">D</div>
-            <div class="botao-letra">F</div>
-            <div class="botao-letra">G</div>
-            <div class="botao-letra">H</div>
-            <div class="botao-letra">J</div>
-            <div class="botao-letra">K</div>
-            <div class="botao-letra">L</div>
-            <div class="botao-letra">Z</div>
-            <div class="botao-letra">X</div>
-            <div class="botao-letra">C</div>
-            <div class="botao-letra">V</div>
-            <div class="botao-letra">B</div>
-            <div class="botao-letra">N</div>
-            <div class="botao-letra">M</div>
+
+            <div class="linha-teclado">
+                <div class="botao-letra">Q</div>
+                <div class="botao-letra">W</div>
+                <div class="botao-letra">E</div>
+                <div class="botao-letra">R</div>
+                <div class="botao-letra">T</div>
+                <div class="botao-letra">Y</div>
+                <div class="botao-letra">U</div>
+                <div class="botao-letra">I</div>
+                <div class="botao-letra">O</div>
+                <div class="botao-letra">P</div>
+            </div>
+            <!-- Próxima linha -->
+
+            <div class="linha-teclado">
+                <div class="botao-letra">A</div>
+                <div class="botao-letra">S</div>
+                <div class="botao-letra">D</div>
+                <div class="botao-letra">F</div>
+                <div class="botao-letra">G</div>
+                <div class="botao-letra">H</div>
+                <div class="botao-letra">J</div>
+                <div class="botao-letra">K</div>
+                <div class="botao-letra">L</div>
+            </div>
+            <!-- Próxima linha -->
+            
+            <div class="linha-teclado">
+                <div class="botao-letra">Z</div>
+                <div class="botao-letra">X</div>
+                <div class="botao-letra">C</div>
+                <div class="botao-letra">V</div>
+                <div class="botao-letra">B</div>
+                <div class="botao-letra">N</div>
+                <div class="botao-letra">M</div>
+            </div>
         </div>
     </body>
 </html>
