teste 1 - ver se funciona

--- a/Jogo_da_Forca/index.html
+++ b/Jogo_da_Forca/index.html
@@ -72,40 +72,40 @@
         <div class="teclado-virtual">
 
             <div class="linha-teclado">
-                <div class="botao-letra"> Q</div> <!--onClick ="metodo()"-->
-                <div class="botao-letra">W</div>
-                <div class="botao-letra">E</div>
-                <div class="botao-letra">R</div>
-                <div class="botao-letra">T</div>
-                <div class="botao-letra">Y</div>
-                <div class="botao-letra">U</div>
-                <div class="botao-letra">I</div>
-                <div class="botao-letra">O</div>
-                <div class="botao-letra">P</div>
+                <div class="botao-letra" id="Q">Q</div> <!--onClick ="metodo()"-->
+                <div class="botao-letra" id="W">W</div>
+                <div class="botao-letra" id="E">E</div>
+                <div class="botao-letra" id="R">R</div>
+                <div class="botao-letra" id="T">T</div>
+                <div class="botao-letra" id="Y">Y</div>
+                <div class="botao-letra" id="U">U</div>
+                <div class="botao-letra" id="I">I</div>
+                <div class="botao-letra" id="O">O</div>
+                <div class="botao-letra" id="P">P</div>
             </div>
             <!-- Próxima linha -->
 
             <div class="linha-teclado">
-                <div class="botao-letra">A</div>
-                <div class="botao-letra">S</div>
-                <div class="botao-letra">D</div>
-                <div class="botao-letra">F</div>
-                <div class="botao-letra">G</div>
-                <div class="botao-letra">H</div>
-                <div class="botao-letra">J</div>
-                <div class="botao-letra">K</div>
-                <div class="botao-letra">L</div>
+                <div class="botao-letra" id="A">A</div>
+                <div class="botao-letra" id="S">S</div>
+                <div class="botao-letra" id="D">D</div>
+                <div class="botao-letra" id="F">F</div>
+                <div class="botao-letra" id="G">G</div>
+                <div class="botao-letra" id="H">H</div>
+                <div class="botao-letra" id="J">J</div>
+                <div class="botao-letra" id="K">K</div>
+                <div class="botao-letra" id="L">L</div>
             </div>
             <!-- Próxima linha -->
             
             <div class="linha-teclado">
-                <div class="botao-letra">Z</div>
-                <div class="botao-letra">X</div>
-                <div class="botao-letra">C</div>
-                <div class="botao-letra">V</div>
-                <div class="botao-letra">B</div>
-                <div class="botao-letra">N</div>
-                <div class="botao-letra">M</div>
+                <div class="botao-letra" id="Z">Z</div>
+                <div class="botao-letra" id="X">X</div>
+                <div class="botao-letra" id="C">C</div>
+                <div class="botao-letra" id="V">V</div>
+                <div class="botao-letra" id="B">B</div>
+                <div class="botao-letra" id="N">N</div>
+                <div class="botao-letra" id="M">M</div>
             </div>
         </div>
 
