--- a/Jogo_da_Forca/index.html
+++ b/Jogo_da_Forca/index.html
@@ -72,40 +72,40 @@
         <div class="teclado-virtual">
 
             <div class="linha-teclado">
-                <div class="botao-letra" id="Q">Q</div> <!--onClick ="metodo()"-->
-                <div class="botao-letra" id="W">W</div>
-                <div class="botao-letra" id="E">E</div>
-                <div class="botao-letra" id="R">R</div>
-                <div class="botao-letra" id="T">T</div>
-                <div class="botao-letra" id="Y">Y</div>
-                <div class="botao-letra" id="U">U</div>
-                <div class="botao-letra" id="I">I</div>
-                <div class="botao-letra" id="O">O</div>
-                <div class="botao-letra" id="P">P</div>
+                <div class="botao-letra" onclick= "ChuteDeLetra('Q')">Q</div> <!--onClick ="metodo()"-->
+                <div class="botao-letra" onclick= "ChuteDeLetra('W')">W</div>
+                <div class="botao-letra" onclick= "ChuteDeLetra('E')">E</div>
+                <div class="botao-letra" onclick= "ChuteDeLetra('R')">R</div>
+                <div class="botao-letra" onclick= "ChuteDeLetra('T')">T</div>
+                <div class="botao-letra" onclick= "ChuteDeLetra('Y')">Y</div>
+                <div class="botao-letra" onclick= "ChuteDeLetra('U')">U</div>
+                <div class="botao-letra" onclick= "ChuteDeLetra('I')">I</div>
+                <div class="botao-letra" onclick= "ChuteDeLetra('O')">O</div>
+                <div class="botao-letra" onclick= "ChuteDeLetra('P')">P</div>
             </div>
             <!-- Próxima linha -->
 
             <div class="linha-teclado">
-                <div class="botao-letra" id="A">A</div>
-                <div class="botao-letra" id="S">S</div>
-                <div class="botao-letra" id="D">D</div>
-                <div class="botao-letra" id="F">F</div>
-                <div class="botao-letra" id="G">G</div>
-                <div class="botao-letra" id="H">H</div>
-                <div class="botao-letra" id="J">J</div>
-                <div class="botao-letra" id="K">K</div>
-                <div class="botao-letra" id="L">L</div>
+                <div class="botao-letra" onclick= "ChuteDeLetra('A')">A</div>
+                <div class="botao-letra" onclick= "ChuteDeLetra('S')">S</div>
+                <div class="botao-letra" onclick= "ChuteDeLetra('D')">D</div>
+                <div class="botao-letra" onclick= "ChuteDeLetra('F')">F</div>
+                <div class="botao-letra" onclick= "ChuteDeLetra('G')">G</div>
+                <div class="botao-letra" onclick= "ChuteDeLetra('H')">H</div>
+                <div class="botao-letra" onclick= "ChuteDeLetra('J')">J</div>
+                <div class="botao-letra" onclick= "ChuteDeLetra('K')">K</div>
+                <div class="botao-letra" onclick= "ChuteDeLetra('L')">L</div>
             </div>
             <!-- Próxima linha -->
             
             <div class="linha-teclado">
-                <div class="botao-letra" id="Z">Z</div>
-                <div class="botao-letra" id="X">X</div>
-                <div class="botao-letra" id="C">C</div>
-                <div class="botao-letra" id="V">V</div>
-                <div class="botao-letra" id="B">B</div>
-                <div class="botao-letra" id="N">N</div>
-                <div class="botao-letra" id="M">M</div>
+                <div class="botao-letra" onclick= "ChuteDeLetra('Z')">Z</div>
+                <div class="botao-letra" onclick= "ChuteDeLetra('X')">X</div>
+                <div class="botao-letra" onclick= "ChuteDeLetra('C')">C</div>
+                <div class="botao-letra" onclick= "ChuteDeLetra('V')">V</div>
+                <div class="botao-letra" onclick= "ChuteDeLetra('B')">B</div>
+                <div class="botao-letra" onclick= "ChuteDeLetra('N')">N</div>
+                <div class="botao-letra" onclick= "ChuteDeLetra('M')">M</div>
             </div>
         </div>
 
