--- a/Jogo_da_Forca/index.html
+++ b/Jogo_da_Forca/index.html
@@ -10,6 +10,7 @@
         <script type="text/javascript" src="./bootstrap-4.5.2-dist/js/bootstrap.min.js"></script>
 
         <link rel="stylesheet" type="text/css" href="./CSS/styles.css">
+        <script type="text/javascript" src="./script.js"></script>
         <title>Jogo da Forca</title>
     </head>
     <body>
