--- a/Jogo_da_Forca/index.html
+++ b/Jogo_da_Forca/index.html
@@ -67,7 +67,7 @@
         </div>
 
         <div class="instrucao">
-            <h2>Selecione a letra que quer inserir:</h2>
+            <h2 class="text-center">Selecione a letra que quer inserir:</h2>
         </div>
 
         <div class="teclado-virtual">
