Primeira versão do html e css

--- a/Jogo_da_Velha/index.html
+++ b/Jogo_da_Velha/index.html
@@ -3,9 +3,76 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <link rel="stylesheet" type="text/css" href="./CSS/styles.css">
+        <script type="text/javascript" src="./JS/script.js"></script>
         <title>Jogo da Velha</title>
     </head>
     <body>
-        
+        <header>
+            <h1>Jogo da Velha</h1>
+        </header>
+
+        <div>
+            <button>Novo Jogo</button>
+        </div>
+
+        <div class="mostra-nome-jogador">
+            <h4>É a vez de: <span id="nome-jogador-atual">...</span></h4>
+        </div>
+
+        <div class="tabuleiro">
+            <div class="linha">
+                <div class="casa-tabuleiro">
+                    <img id="casa0" src="">
+                    Vai ter imagem
+                </div>
+
+                <div class="casa-tabuleiro">
+                    <img id="casa1" src="">
+                    Vai ter imagem
+                </div>
+
+                <div class="casa-tabuleiro">
+                    <img id="casa2" src="">
+                    Vai ter imagem
+                </div>
+            </div>
+
+            <div class="linha">
+                <div class="casa-tabuleiro">
+                    <img id="casa3" src="">
+                    Vai ter imagem
+                </div>
+
+                <div class="casa-tabuleiro">
+                    <img id="casa4" src="">
+                    Vai ter imagem
+                </div>
+
+                <div class="casa-tabuleiro">
+                    <img id="casa5" src="">
+                    Vai ter imagem
+                </div>
+            </div>
+
+            <div class="linha">
+                <div class="casa-tabuleiro">
+                    <img id="casa6" src="">
+                    Vai ter imagem
+                </div>
+
+                <div class="casa-tabuleiro">
+                    <img id="casa7" src="">
+                    Vai ter imagem
+                </div>
+
+                <div class="casa-tabuleiro">
+                    <img id="casa8" src="">
+                    Vai ter imagem
+                </div>
+            </div>
+        </div>
+
     </body>
 </html>
