--- a/Jogo_da_Velha/index.html
+++ b/Jogo_da_Velha/index.html
@@ -14,7 +14,7 @@
         </header>
 
         <div>
-            <button>Novo Jogo</button>
+            <button onclick="NovoJogo()" >Novo Jogo</button>
         </div>
 
         <div class="mostra-nome-jogador">
@@ -23,51 +23,51 @@
 
         <div class="tabuleiro">
             <div class="linha">
-                <div class="casa-tabuleiro">
+                <div onclick="Jogada(0)" class="casa-tabuleiro">
                     <img id="casa0" src="">
                     Vai ter imagem
                 </div>
 
-                <div class="casa-tabuleiro">
+                <div onclick="Jogada(1)" class="casa-tabuleiro">
                     <img id="casa1" src="">
                     Vai ter imagem
                 </div>
 
-                <div class="casa-tabuleiro">
+                <div onclick="Jogada(2)" class="casa-tabuleiro">
                     <img id="casa2" src="">
                     Vai ter imagem
                 </div>
             </div>
 
             <div class="linha">
-                <div class="casa-tabuleiro">
+                <div onclick="Jogada(3)" class="casa-tabuleiro">
                     <img id="casa3" src="">
                     Vai ter imagem
                 </div>
 
-                <div class="casa-tabuleiro">
+                <div onclick="Jogada(4)" class="casa-tabuleiro">
                     <img id="casa4" src="">
                     Vai ter imagem
                 </div>
 
-                <div class="casa-tabuleiro">
+                <div onclick="Jogada(5)" class="casa-tabuleiro">
                     <img id="casa5" src="">
                     Vai ter imagem
                 </div>
             </div>
 
             <div class="linha">
-                <div class="casa-tabuleiro">
+                <div onclick="Jogada(6)" class="casa-tabuleiro">
                     <img id="casa6" src="">
                     Vai ter imagem
                 </div>
 
-                <div class="casa-tabuleiro">
+                <div onclick="Jogada(7)" class="casa-tabuleiro">
                     <img id="casa7" src="">
                     Vai ter imagem
                 </div>
 
-                <div class="casa-tabuleiro">
+                <div onclick="Jogada(8)" class="casa-tabuleiro">
                     <img id="casa8" src="">
                     Vai ter imagem
                 </div>
