Acrescentei as imagens na pasta

--- a/Jogo_da_Velha/index.html
+++ b/Jogo_da_Velha/index.html
@@ -24,52 +24,43 @@
         <div class="tabuleiro">
             <div class="linha">
                 <div onclick="Jogada(0)" class="casa-tabuleiro">
-                    <img id="casa0" src="">
-                    Vai ter imagem
+                    <img id="casa0" src="./Imagens/Vazio.png">
                 </div>
 
                 <div onclick="Jogada(1)" class="casa-tabuleiro">
-                    <img id="casa1" src="">
-                    Vai ter imagem
+                    <img id="casa1" src="./Imagens/Vazio.png">
                 </div>
 
                 <div onclick="Jogada(2)" class="casa-tabuleiro">
-                    <img id="casa2" src="">
-                    Vai ter imagem
+                    <img id="casa2" src="./Imagens/Vazio.png">
                 </div>
             </div>
 
             <div class="linha">
                 <div onclick="Jogada(3)" class="casa-tabuleiro">
-                    <img id="casa3" src="">
-                    Vai ter imagem
+                    <img id="casa3" src="./Imagens/Vazio.png">
                 </div>
 
                 <div onclick="Jogada(4)" class="casa-tabuleiro">
-                    <img id="casa4" src="">
-                    Vai ter imagem
+                    <img id="casa4" src="./Imagens/Vazio.png">
                 </div>
 
                 <div onclick="Jogada(5)" class="casa-tabuleiro">
-                    <img id="casa5" src="">
-                    Vai ter imagem
+                    <img id="casa5" src="./Imagens/Vazio.png">
                 </div>
             </div>
 
             <div class="linha">
                 <div onclick="Jogada(6)" class="casa-tabuleiro">
-                    <img id="casa6" src="">
-                    Vai ter imagem
+                    <img id="casa6" src="./Imagens/Vazio.png">
                 </div>
 
                 <div onclick="Jogada(7)" class="casa-tabuleiro">
-                    <img id="casa7" src="">
-                    Vai ter imagem
+                    <img id="casa7" src="./Imagens/Vazio.png">
                 </div>
 
                 <div onclick="Jogada(8)" class="casa-tabuleiro">
-                    <img id="casa8" src="">
-                    Vai ter imagem
+                    <img id="casa8" src="./Imagens/Vazio.png">
                 </div>
             </div>
         </div>
