--- a/Jogo_da_Velha/index.html
+++ b/Jogo_da_Velha/index.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <link href="https://fonts.googleapis.com/css2?family=Jura:wght@400;500;600;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
+
         <link rel="stylesheet" type="text/css" href="./CSS/styles.css">
         <script type="text/javascript" src="./JS/script.js"></script>
         <title>Jogo da Velha</title>
