Novo ID para mostrar vitória

--- a/Jogo_da_Velha/index.html
+++ b/Jogo_da_Velha/index.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="mostra-nome-jogador">
-            <h4>É a vez de: <span id="nome-jogador-atual">...</span></h4>
+            <h4 id="texto-guia">É a vez de: <span id="nome-jogador-atual">...</span></h4>
         </div>
 
         <div class="tabuleiro">
