Mudanças no HTML e CSS para evitar problemas de mudança de HTML

--- a/Jogo_da_Velha/index.html
+++ b/Jogo_da_Velha/index.html
@@ -21,7 +21,8 @@
         </div>
 
         <div class="mostra-nome-jogador">
-            <h4 id="texto-guia">É a vez de: <span id="nome-jogador-atual">...</span></h4>
+            <h4 id="texto-guia">É a vez de: </h4>
+            <p id="nome-jogador-atual">...</p>
         </div>
 
         <div class="tabuleiro">
